# coordinator-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
experiments/: pyproject.toml
experiments/corpus/persona_review/files/: auth_middleware.ts  cache_manager.py  config_loader.py  data_pipeline.ts  event_emitter.ts  file_processor.py  payment_processor.py  task_scheduler.py  user_service.py  websocket_handler.ts
experiments/corpus/persona_review/manifests/: defects.yaml  distractors.yaml
experiments/prompts/persona_review/: arm_a_vanilla.md  arm_b_rich_unnamed_1p.md  arm_bp_rich_unnamed_3p.md  arm_d_rich_named_1p.md  arm_specialist.md  shared_output_format.md
experiments/scripts/: run_persona_experiment.py
experiments/src/review_experiments/: __init__.py  cli.py  client.py  corpus.py  parser.py  runner.py  schemas.py  scorer.py  storage.py
experiments/src/review_experiments/persona/: __init__.py  agent_client.py  api_client.py  arms.py  cli.py  config.py  parser.py  pipeline.py  prompt_builder.py  result_store.py  runner.py  scorer.py
experiments/src/review_experiments/sequential/: __init__.py  config.py  correction_audit.py  pipeline.py
experiments/tests/: test_corpus.py  test_parser.py  test_scorer.py  test_sequential.py  test_storage.py
experiments/tests/fixtures/corpus/files/: file_001.py  file_002.py
experiments/tests/fixtures/corpus/manifests/: defects.json  distractors.json
(+415 files in other folders)
