[project]
name = "review-experiments"
version = "0.1.0"
description = "Experiment harness for LLM code review experiments"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "tqdm>=4.66",
    "pandas>=2.0",
    "scipy>=1.12",
]

[project.scripts]
review-experiments = "review_experiments.cli:main"

[project.optional-dependencies]
stats = ["pymer4>=0.8"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_experiments"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
